JumpScript/tests/baselines/reference/parserInvocationOfMemberAccessOffOfObjectCreationExpression1.errors.txt
tests/cases/conformance/parser/ecmascript5/Expressions/parserInvocationOfMemberAccessOffOfObjectCreationExpression1.jump(1,5): error TS2304: Cannot find name 'A'.


==== tests/cases/conformance/parser/ecmascript5/Expressions/parserInvocationOfMemberAccessOffOfObjectCreationExpression1.jump (1 errors) ====
    new A().b()
        ~
!!! error TS2304: Cannot find name 'A'.